--- a/Week04/Angular8_JULY/demoapp/src/app/app.component.html
+++ b/Week04/Angular8_JULY/demoapp/src/app/app.component.html
@@ -1,7 +1,5 @@
-<!--
- * @Author: Hanfan Wang
- * @Date: 2020-08-06 11:13:09
- * @LastEditTime: 2020-08-06 11:42:56
--->
 <h1>{{ title }}</h1>
-<app-test-component></app-test-component>
+
+<!-- <app-test-component></app-test-component> -->
+<!-- <app-class-binding></app-class-binding> -->
+<app-event-binding></app-event-binding>
