--- a/Week04/Angular8_JULY/demoapp/src/app/test-component/test-component.component.html
+++ b/Week04/Angular8_JULY/demoapp/src/app/test-component/test-component.component.html
@@ -1,1 +1,4 @@
 <p>test-component works!</p>
+<input type="text" [id]="myId" value="Angular 8">
+<input type="text" [disabled]="isDisables" id="{{myId}}" value="Angular 8">
+<input type="text" bind-disabled="isDisables" id="{{myId}}" value="Angular 8">
