--- a/Week04/Angular8_JULY/demoapp/src/app/event-binding/event-binding.component.html
+++ b/Week04/Angular8_JULY/demoapp/src/app/event-binding/event-binding.component.html
@@ -5,3 +5,29 @@
 
 <input #myInput type="text">
 <button (click)="logMessage(myInput.value)">Log</button>
+<hr>
+<input [(ngModel)]="name" type="text">
+{{ name }}
+<hr>
+<!-- ngIf -->
+<h2 *ngIf="displayName; then thenBlock; else elseblock">Angular8</h2>
+<ng-template #thenBlock>
+  <h2>
+    Then Block
+  </h2>
+</ng-template>
+<ng-template #elseblock>
+  <h2>
+    Else block
+  </h2>
+</ng-template>
+
+<!-- Switch -->
+
+<div [ngSwitch]="color">
+  <div *ngSwitchCase="'red'">You picked red color</div>
+  <div *ngSwitchCase="'blue'">You picked blue color</div>
+  <div *ngSwitchCase="'green'">You picked green color</div>
+  <div *ngSwitchCase="'orange'">You picked orange color</div>
+  <div *ngSwitchDefault>Pick Again</div>
+</div>
