--- a/Week04/Angular8_JULY/demoapp/src/app/app.component.html
+++ b/Week04/Angular8_JULY/demoapp/src/app/app.component.html
@@ -2,4 +2,8 @@
 
 <!-- <app-test-component></app-test-component> -->
 <!-- <app-class-binding></app-class-binding> -->
-<app-event-binding></app-event-binding>
+<!--<app-event-binding></app-event-binding>-->
+<div>
+  {{ message }}
+</div>
+<app-component-interacction [parentData]="name" (childEvent)="message=$event"></app-component-interacction>
