--- a/Week04/Angular8_JULY/demoapp/src/app/app.component.html
+++ b/Week04/Angular8_JULY/demoapp/src/app/app.component.html
@@ -1,9 +1,12 @@
-<h1>{{ title }}</h1>
+<!--<h1>{{ title }}</h1>-->
 
-<!-- <app-test-component></app-test-component> -->
-<!-- <app-class-binding></app-class-binding> -->
-<!--<app-event-binding></app-event-binding>-->
-<div>
-  {{ message }}
-</div>
-<app-component-interacction [parentData]="name" (childEvent)="message=$event"></app-component-interacction>
+<!--&lt;!&ndash; <app-test-component></app-test-component> &ndash;&gt;-->
+<!--&lt;!&ndash; <app-class-binding></app-class-binding> &ndash;&gt;-->
+<!--&lt;!&ndash;<app-event-binding></app-event-binding>&ndash;&gt;-->
+<!--<div>-->
+<!--  {{ message }}-->
+<!--</div>-->
+<!--<app-component-interacction [parentData]="name" (childEvent)="message=$event"></app-component-interacction>-->
+
+<app-employee-list></app-employee-list>
+<app-employee-detail></app-employee-detail>
