--- a/Week04/Angular8_JULY/routing-app/src/app/app.component.html
+++ b/Week04/Angular8_JULY/routing-app/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>Routing and Navigation</h1>
 </div>
 <nav>
-  <a routerLink="/departments" routerLinkActive="active">Departments</a>
+  <a routerLink="/departments" routerLinkActive="active">Departments</a> &nbsp;
   <a routerLink="/employees" routerLinkActive="active">Employees</a>
 </nav>
 <router-outlet></router-outlet>
