--- a/Week05/contentProjection/src/app/greet/greet.component.html
+++ b/Week05/contentProjection/src/app/greet/greet.component.html
@@ -1,1 +1,6 @@
-<p>greet works!</p>
+<!--{{ parentData }}-->
+<div class="container text-center">
+  <ng-content select="h1"></ng-content>
+  <p>{{ message }}</p>
+  <ng-content select="button"></ng-content>
+</div>
