--- a/Week07/firebasedemo/src/app/pages/register/register.component.html
+++ b/Week07/firebasedemo/src/app/pages/register/register.component.html
@@ -1,1 +1,24 @@
-<p>register works!</p>
+<div class="container">
+  <div class="row justify-content-center p-4">
+    <div class="col-md-6">
+      <form (ngSubmit)="register()">
+        <h3>Firebase Register</h3>
+        <div class="form-group p-2">
+          <input type="email" name="email" class="form-control" [(ngModel)]="email" placeholder="Enter Your EmailID"
+            required>
+        </div>
+        <div class="form-group p-2">
+          <input type="password" name="password" class="form-control" [(ngModel)]="password"
+            placeholder="Enter Password" required>
+        </div>
+        <div class="form-group p-2">
+          <button type="submit" class="btn btn-primary">Register</button>
+          <div class="register">
+            <a href="#" routerLink="/login">Back To Login</a>
+          </div>
+        </div>
+      </form>
+
+    </div>
+  </div>
+</div>
